apps/homelab-web/envs/prod/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homelab-web
  namespace: homelab-web
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: web
          image: ghcr.io/wlodzimierrr/homelab-web:sha-6a30b92a070e7bf11e847dd56052e92171a09a22
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
